# su24-cs411-team010-chonk

./: README.md  TeamInfo.md  package-lock.json
.github/workflows/: check-pr.yml  preview.yml  production.yml
backend/: .env.example  Dockerfile  README.md  cloudbuild-preview.yml  cloudbuild.yml  model.pkl  pyproject.toml  testing.db
backend/src/: auth.py  config.py  database.py  main.py  models.py  riot_api.py
backend/tests/: conftest.py  test_api.py
cs411_ml/: coef.txt  cs411.ipynb  csv5.txt  model.pkl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.module.css  App.tsx  OwnStats.module.css  OwnStats.tsx  OwnStatsGraph.module.css  OwnStatsGraph.tsx  config.ts  main.tsx  theme.ts
frontend/src/pages/Home/: index.tsx
frontend/src/pages/Lookup/: Lookup.tsx
frontend/src/pages/PlayerStats/: OwnStats.tsx  OwnStatsGraph.tsx
scrapedata/: download.py  scrape.py
