[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Daniel Wang", email = "hello@danielwang.dev" }
]
dependencies = [
    "fastapi>=0.111.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.4",
    "pytest>=8.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
