[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Daniel Wang", email = "hello@danielwang.dev" }
]
dependencies = [
    "fastapi>=0.111.1",
    "sqlalchemy>=2.0.31",
    "pydantic-settings>=2.3.4",
    "pymysql>=1.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.8.0",
    "scipy>=1.14.0",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ruff>=0.5.4",
    "pytest>=8.3.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
pythonpath = "src"
